Bug 500393 - kwin_wayland logs logs error messages to the journal kwin_core: Cannot grant a token to KWin::ClientConnection
Summary: kwin_wayland logs logs error messages to the journal kwin_core: Cannot grant ...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.3.1
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 502443 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-02-19 11:19 UTC by hbr
Modified: 2025-04-28 11:03 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screencast showing the issue (1.16 MB, video/mp4)
2025-02-20 07:28 UTC, hbr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description hbr 2025-02-19 11:19:35 UTC
SUMMARY

Opening folder properties via Dolphin logs the following error message to the journal:

19.02.25 12:09	kwin_wayland	kwin_core: Cannot grant a token to KWin::ClientConnection(0x644f09e601e0)

STEPS TO REPRODUCE

1. Select multiple folders in Dolphin
2. Right click -> Properties
3. Close the properties window with "Cancel"
4. Check the journal

OBSERVED RESULT
The above error message appears in the journal multiple times.

EXPECTED RESULT
No error happens / error messages get logged.

SOFTWARE/OS VERSIONS
Operating System: EndeavourOS 
KDE Plasma Version: 6.3.1
KDE Frameworks Version: 6.11.0
Qt Version: 6.8.2
Kernel Version: 6.13.2-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 7800X3D 8-Core Processor
Memory: 30,9 GiB of RAM
Graphics Processor: AMD Radeon RX 7900 XTX
Manufacturer: ASRock
Product Name: X670E Steel Legend
Comment 1 Nate Graham 2025-02-19 20:18:13 UTC
I can't reproduce this.
Comment 2 hbr 2025-02-20 07:28:56 UTC
Created attachment 178624 [details]
Screencast showing the issue

Screencast showing the issue
Comment 3 tjw123hh 2025-03-21 16:03:13 UTC
I've met the same problem.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.3.3
KDE Frameworks Version: 6.12.0
Qt Version: 6.8.2
Kernel Version: 6.13.7-zen1-1.1-zen (64-bit)
Graphics Platform: Wayland
Processors: 12 × 12th Gen Intel® Core™ i5-12490F
Memory: 15.5 GiB of RAM
Graphics Processor: AMD Radeon RX 6600 LE
Manufacturer: Micro-Star International Co., Ltd.
Product Name: MS-7E44
System Version: 1.0
Comment 4 John Kizer 2025-04-06 20:43:45 UTC
*** Bug 502443 has been marked as a duplicate of this bug. ***
Comment 5 Zamundaaa 2025-04-10 17:06:06 UTC
This is not an error, it's a harmless warning.
Comment 6 Bug Janitor Service 2025-04-10 17:06:29 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7487
Comment 7 Zamundaaa 2025-04-10 18:34:37 UTC
Git commit b3677331036bd98a7f3aa44c48a208723a17bf29 by Xaver Hugl.
Committed on 10/04/2025 at 17:05.
Pushed by zamundaaa into branch 'master'.

xdgactivation: downgrade "cannot grant a token" warning to a debug message

Even that is maybe too much... this is expected to happen rather often in normal usage.

M  +1    -1    src/xdgactivationv1.cpp

https://invent.kde.org/plasma/kwin/-/commit/b3677331036bd98a7f3aa44c48a208723a17bf29
Comment 8 Zamundaaa 2025-04-10 19:05:21 UTC
Git commit b97c063740002c5b865552bdfd89e36b71b0fcc1 by Xaver Hugl.
Committed on 10/04/2025 at 18:34.
Pushed by zamundaaa into branch 'Plasma/6.3'.

xdgactivation: downgrade "cannot grant a token" warning to a debug message

Even that is maybe too much... this is expected to happen rather often in normal usage.


(cherry picked from commit b3677331036bd98a7f3aa44c48a208723a17bf29)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>

M  +1    -1    src/xdgactivationv1.cpp

https://invent.kde.org/plasma/kwin/-/commit/b97c063740002c5b865552bdfd89e36b71b0fcc1