xdgactivation: downgrade "cannot grant a token" warning to a debug message

Even that is maybe too much... this is expected to happen rather often in normal usage.

BUG: 500393


(cherry picked from commit b3677331036bd98a7f3aa44c48a208723a17bf29)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>